1.實作Controller之HttpGet功能 2.安全性考量將資料庫連接字串移至appsettings.json 3.dotNet 6不支援Startup.cs, DI注入改寫至Program.cs

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DemoDatabase": "Server=localhost\\SQLEXPRESS;Database=DemoDatabase;Trusted_Connection=True;User ID=demo;Password=demo"
+  }
 }
