1.Service改成DI注入 2.修改DB SQLServer設定增加安全性

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DemoDatabase": "Server=localhost\\SQLEXPRESS;Database=DemoDatabase;Trusted_Connection=True;User ID=demo;Password=demo"
+    "DemoDatabase": "Server=LAPTOP-J4GFPN3T\\SQLEXPRESS;Database=DemoDatabase;Trusted_Connection=True;User ID=demo;Password=demo"
   }
 }
