Revert "fixes: 修正前端驗證問題 (issue #1)"
This reverts commit a838fa7c54dae02375c920e15c27d88e883e3082.

--- a/DemoWeb.csproj
+++ b/DemoWeb.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Folder Include="Abstracts\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="ValidationAttributes\" />
   </ItemGroup>
 
 </Project>
